maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: type mismatch;
 found   : Int
 required: (Int, Int)
  return xb; yb
         ^JediEscaper:13: error: type mismatch;
 found   : Int
 required: (Int, Int)
  return xb; yb
             ^